# scd30_zigbee

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  SCD30_ZIGBEE.code-workspace  app_defs.h  i2c_handler.c  i2c_handler.h  idf_component.yml  main.c  main.h  scd30_driver.c  scd30_driver.h  troubleshooting.c  zigbee_handler.c
main/components/common/: app_defs.h
main/components/i2c_handler/: i2c_handler.c  i2c_handler.h
main/components/scd30_driver/: scd30_driver.c  scd30_driver.h
main/components/troubleshooting/: troubleshooting.c  troubleshooting.h
main/components/zigbee_handler/: zigbee_handler.c  zigbee_handler.h
