idf_component_register(
    SRCS 
        "main.c"
        "components/i2c_handler/i2c_handler.c"
        "components/scd30_driver/scd30_driver.c"
        "components/zigbee_handler/zigbee_handler.c"
        "components/troubleshooting/troubleshooting.c"
    INCLUDE_DIRS 
        "."
        "components"
        "components/i2c_handler"
        "components/scd30_driver"
        "components/zigbee_handler"
        "components/troubleshooting"
        "components/common"
        "${CMAKE_SOURCE_DIR}/managed_components/espressif__esp-zboss-lib/include"
        "${CMAKE_SOURCE_DIR}/managed_components/espressif__esp-zigbee-lib/include"
    REQUIRES 
        driver 
        nvs_flash
        esp_timer 
        espressif__esp-zboss-lib
        espressif__esp-zigbee-lib
)